--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""
 ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous"></script>
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
@@ -127,6 +128,7 @@
     <i class="fas fa-chevron-down has-text-centered pb-3"></i>
   </section>
 
+  <div id="chartContainer" style="height: 370px; width: 100%;"></div>
 
 <section class="section has-background-info-light" id="map">
   <div class="column">
@@ -261,6 +263,122 @@
   </footer>
   <script src="script.js"></script>
   <script src="bulmaNav.js"></script>
+  <script>
+window.onload = function () {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+  animationEnabled: true,
+  title:{
+    text: "Evening Sales in a Restaurant"
+  },
+  axisX: {
+    valueFormatString: "DDD"
+  },
+  axisY: {
+    prefix: "$"
+  },
+  toolTip: {
+    shared: true
+  },
+  legend:{
+    cursor: "pointer",
+    itemclick: toggleDataSeries
+  },
+  data: [{
+    type: "stackedBar",
+    name: "Meals",
+    showInLegend: "true",
+    xValueFormatString: "DD, MMM",
+    yValueFormatString: "$#,##0",
+    dataPoints: [
+      { x: new Date(2017, 0, 30), y: 56 },
+      { x: new Date(2017, 0, 31), y: 45 },
+      { x: new Date(2017, 1, 1), y: 71 },
+      { x: new Date(2017, 1, 2), y: 41 },
+      { x: new Date(2017, 1, 3), y: 60 },
+      { x: new Date(2017, 1, 4), y: 75 },
+      { x: new Date(2017, 1, 5), y: 98 }
+    ]
+  },
+  {
+    type: "stackedBar",
+    name: "Snacks",
+    showInLegend: "true",
+    xValueFormatString: "DD, MMM",
+    yValueFormatString: "$#,##0",
+    dataPoints: [
+      { x: new Date(2017, 0, 30), y: 86 },
+      { x: new Date(2017, 0, 31), y: 95 },
+      { x: new Date(2017, 1, 1), y: 71 },
+      { x: new Date(2017, 1, 2), y: 58 },
+      { x: new Date(2017, 1, 3), y: 60 },
+      { x: new Date(2017, 1, 4), y: 65 },
+      { x: new Date(2017, 1, 5), y: 89 }
+    ]
+  },
+  {
+    type: "stackedBar",
+    name: "Drinks",
+    showInLegend: "true",
+    xValueFormatString: "DD, MMM",
+    yValueFormatString: "$#,##0",
+    dataPoints: [
+      { x: new Date(2017, 0, 30), y: 48 },
+      { x: new Date(2017, 0, 31), y: 45 },
+      { x: new Date(2017, 1, 1), y: 41 },
+      { x: new Date(2017, 1, 2), y: 55 },
+      { x: new Date(2017, 1, 3), y: 80 },
+      { x: new Date(2017, 1, 4), y: 85 },
+      { x: new Date(2017, 1, 5), y: 83 }
+    ]
+  },
+  {
+    type: "stackedBar",
+    name: "Dessert",
+    showInLegend: "true",
+    xValueFormatString: "DD, MMM",
+    yValueFormatString: "$#,##0",
+    dataPoints: [
+      { x: new Date(2017, 0, 30), y: 61 },
+      { x: new Date(2017, 0, 31), y: 55 },
+      { x: new Date(2017, 1, 1), y: 61 },
+      { x: new Date(2017, 1, 2), y: 75 },
+      { x: new Date(2017, 1, 3), y: 80 },
+      { x: new Date(2017, 1, 4), y: 85 },
+      { x: new Date(2017, 1, 5), y: 105 }
+    ]
+  },
+  {
+    type: "stackedBar",
+    name: "Takeaway",
+    showInLegend: "true",
+    xValueFormatString: "DD, MMM",
+    yValueFormatString: "$#,##0",
+    dataPoints: [
+      { x: new Date(2017, 0, 30), y: 52 },
+      { x: new Date(2017, 0, 31), y: 55 },
+      { x: new Date(2017, 1, 1), y: 20 },
+      { x: new Date(2017, 1, 2), y: 35 },
+      { x: new Date(2017, 1, 3), y: 30 },
+      { x: new Date(2017, 1, 4), y: 45 },
+      { x: new Date(2017, 1, 5), y: 25 }
+    ]
+  }]
+});
+chart.render();
+
+function toggleDataSeries(e) {
+  if(typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+    e.dataSeries.visible = false;
+  }
+  else {
+    e.dataSeries.visible = true;
+  }
+  chart.render();
+}
+
+}
+</script>
 </body>
 
 </html>
